--- a/lang/en.json
+++ b/lang/en.json
@@ -134,6 +134,8 @@
     "pong": "/me Pong!",
     "novababy": "/me I do what I want!",
     "rut": "/me Earl Grey, Hot.",
+    "number": "/me Nah, I'm #1",
+    "yooo": "/me YOOOOOOOOOOOOO!",
     "reload": "/me Be right back.",
     "removenotinwl": "/me [@%%NAME%%] Specified user @%%USERNAME%% is not in the waitlist.",
     "roomrules": "/me Please find the room rules here: %%LINK%%",
